--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.
 
 ## Installation
 
-You can install the the development version of **lpirfs** from [GitHub](https://github.com/):
+You can install the development version of **lpirfs** from [GitHub](https://github.com/):
 
 ``` r
 # install.packages("devtools")
