- Update on README

--- a/README.Rmd
+++ b/README.Rmd
@@ -37,6 +37,13 @@ You can install the development version of **lpirfs** from [GitHub](https://gith
 # install.packages("devtools")
 devtools::install_github("AdaemmerP/lpirfs")
 ```
+
+The package compiles some C++ source code for installation, which is why you need the appropriate compilers:
+
+On Windows you need the [Rtools](https://cran.r-project.org/bin/windows/Rtools/) available from CRAN. 
+
+On macOS you need the the Clang 6.x compiler from [macOS tools](https://cran.r-project.org/bin/macosx/tools/).
+
 ## Examples
 Examples can be found [here.](https://adaemmerp.github.io/lpirfs/README_docs.html)
 
