- Update tests and README

--- a/README.Rmd
+++ b/README.Rmd
@@ -42,7 +42,7 @@ The package compiles some C++ source code for installation, which is why you nee
 
 On Windows you need the [Rtools](https://cran.r-project.org/bin/windows/Rtools/) available from CRAN. 
 
-On macOS you need the the Clang 6.x compiler from [macOS tools](https://cran.r-project.org/bin/macosx/tools/).
+On macOS you need the the Clang 6.x compiler and the GNU Fortran compiler from [macOS tools](https://cran.r-project.org/bin/macosx/tools/).
 
 ## Examples
 Examples can be found [here.](https://adaemmerp.github.io/lpirfs/README_docs.html)
