--- a/README.Rmd
+++ b/README.Rmd
@@ -43,8 +43,8 @@ The package compiles some C++ source code for installation, which is why you nee
 On Windows you need [Rtools](https://cran.r-project.org/bin/windows/Rtools/) available from CRAN. 
 
 On macOS you need the Clang 6.x compiler and the GNU Fortran compiler from [macOS tools](https://cran.r-project.org/bin/macosx/tools/).
-After installation, you have to open a terminal and start R via 'PATH=/usr/local/clang6/bin:$PATH R'. 
-Yo then have to install the package via *devtools::install_github("AdaemmerP/lpirfs")*
+Having installed the compilers, you need to open a terminal and start R via 'PATH=/usr/local/clang6/bin:$PATH R'. 
+Yo can then install the package via *devtools::install_github("AdaemmerP/lpirfs")*
 
 
 
