--- a/docs/README_docs.Rmd
+++ b/docs/README_docs.Rmd
@@ -74,14 +74,14 @@ See the data's help file or the [paper](https://www.aeaweb.org/articles?id=10.12
 ```
 
 $$ $$
-The switching variable ($z_t$) can either be decomposed by the Hodrick-Prescott filter (see [Auerbach and Gorodnichenko, 2013](http://www.nber.org/papers/w17447.pdf)) or directly plugged into the following transition function:  
+The switching variable ($z_t$) can either be decomposed by the Hodrick-Prescott filter (see [Auerbach and Gorodnichenko, 2013](http://www.nber.org/papers/w17447.pdf)) or directly plugged into the following logistic function:  
 
 
- $$F({z_t})  = \  \frac{e^{(-\gamma z_t)}}{\left(1 + e^{(-\gamma z_t)})\right)},$$
+ $$F({z_t})  = \  \frac{e^{(-\gamma z_t)}}{\left(1 + e^{(-\gamma z_t)}\right)},$$
  
 
 
-where $\gamma > 0$. To differentiate between the two regimes, the exogenous variables ($\boldsymbol{y}_{t-p}$) are multiplied with the values of the transition function at *t − 1* where
+where $\gamma > 0$. To differentiate between the two regimes, the exogenous variables ($\boldsymbol{y}_{t-p}$) are multiplied with the values of the transition function above at *t − 1* where
 
 - Regime 1 $(R_1)$: $\boldsymbol{y}_{t-i}\cdot(1-F(z_{t-1}))$,  $\qquad i = 1, ..., p$,
 
