--- a/README.Rmd
+++ b/README.Rmd
@@ -57,8 +57,13 @@ Yo can then install the package via *devtools::install_github("AdaemmerP/lpirfs"
 I greatly benefit from the profound *R*, *Rcpp* and *GitHub* knowledge of Philipp (stack) [Wittenberg](https://github.com/wittenberg) and Detlef (overflow) [Steuer](https://github.com/dsteuer). Remaining errors are obviously mine. 
 
 ## Development
-I am working on a function to include exogenous variables and a function which allows to manually
-identify the linear combinations of the reduced form residuals. 
+I intend to extend the package with functions that
+
+* allow to manually identify the linear combinations of the reduced form residuals,
+* allow to include exogenous variables,
+* conduct IV-lp estimation,
+* conduct panel-lp estimation.
+
 
 ### Author
 Philipp Adämmer
