--- a/docs/README_docs.Rmd
+++ b/docs/README_docs.Rmd
@@ -31,13 +31,14 @@ See the data's help file or the [paper](https://www.aeaweb.org/articles?id=10.12
 Estimate linear impulse responses with the package function *lp_lin*. Note that the VAR's endogenous variables (*data_set_df*) have to be 
 a data.frame(). 
 ```{r, message = FALSE }  
-results_lin <- lp_lin(data_set_df, lags_lin       = 4L,  # Number of lags
-                                   lags_criterion = NaN, # Lag length criterion (AICc, AIC or BIC) or NaN
+results_lin <- lp_lin(data_set_df, lags_lin       = 4L,  # Number of lags.
+                                   lags_criterion = NaN, # Lag length criterion (AICc, AIC or BIC) or NaN.
                                    max_lags       = NaN, # Maximum number of lags or NaN.
-                                   trend          = 0L,  # 0 = no trend, 1 = trend, 2 = trend and quadratic trend
-                                   shock_type     = 1L,  # 0 = standard deviation shock, 1 = unit shock
+                                   trend          = 0L,  # 0 = no trend, 1 = trend, 2 = trend & trend^2.     
+                                   shock_type     = 1L,  # 0 = standard deviation shock, 1 = unit shock.
                                    confint        = 1.96, # Width of confidence bands: 1 = 68%, 1.67 = 90%, 
-                                   hor            = 24L)  # Number of horizons for impulse responses
+                                                          # 1.96 = 95%.
+                                   hor            = 24L)  # Number of horizons for impulse responses.
 ```
 
 Create plots for impulse responses of linear model with package function *plot_lin_irfs*.
@@ -116,20 +117,19 @@ $$ $$
 Estimate nonlinear impulse responses with package function *lp_nl*. Note that the VAR's data set (*data_set_df*) has to be 
 a data.frame(). 
 ```{r, message = FALSE }  
-results_nl <- lp_nl(data_set_df, lags_lin       = 4L,  # Number of lags for (reduced) linear VAR 
-                                 lags_nl        = 4L,  # Number of lags 
-                                 lags_criterion = NaN, # Lag length criterion (AICc, AIC or BIC) or NaN
-                                 max_lags       = NaN, # If lags_criterion is chosen, maximum number of lags  
-                                 trend          = 1L,  # 0 = no trend, 1 = trend, 2 = trend and quadratic trend
-                                 shock_type     = 0L,  # 0 = standard deviation shock, 1 = unit shock
+results_nl <- lp_nl(data_set_df, lags_lin       = 4L,  # Number of lags for (reduced) linear VAR. 
+                                 lags_nl        = 4L,  # Number of lags. 
+                                 lags_criterion = NaN, # Lag length criterion (AICc, AIC or BIC) or NaN.
+                                 max_lags       = NaN, # If lags_criterion is chosen, maximum number of lags.  
+                                 trend          = 1L,  # 0 = no trend, 1 = trend, 2 = trend & trend^2.
+                                 shock_type     = 0L,  # 0 = standard deviation shock, 1 = unit shock.
                                  confint        = 1.67, # Width of confidence bands: 1 = 68%, 1.67 = 90%, 
-                                                        # 1.96 = 95%
-                                 hor            = 24,   # Length of horizon
-                      
-                                 switching      = data_set_df$Infl, # Inflation rate
-                                 hp_filter      = 1,    # 0 = Do not use HP-filter, 1 = use HP-filter   
-                                 lambda         = 1600, # Monthly = 129600, Quarterly = 1600, Annual = 6.25
-                                 gamma          = 6)    # Numeric value > 0 
+                                                        # 1.96 = 95%.
+                                 hor            = 24,   # Length of horizon.
+                                 switching      = data_set_df$Infl, # Inflation rate.
+                                 hp_filter      = 1,    # 0 = Do not use HP-filter, 1 = use HP-filter.   
+                                 lambda         = 1600, # Monthly = 129600, Quarterly = 1600, Annual = 6.25.
+                                 gamma          = 6)    # Numeric value > 0. 
 ```
 
 Save values from transition function and list which contains data information. 
