--- a/README.Rmd
+++ b/README.Rmd
@@ -54,7 +54,7 @@ Yo can then install the package via *devtools::install_github("AdaemmerP/lpirfs"
 
 
 ## Acknowledgements
-I greatly benefit from the profound *R*, *Rcpp* and *GitHub* knowledge of Philipp (stack) [Wittenberg](https://github.com/wittenberg) and Detlef (overflow) [Steuer](https://github.com/dsteuer). Remaining errors are obviously mine. 
+I greatly benefit from the profound *R*, *Rcpp* and *GitHub* knowledge of Philipp [Wittenberg](https://github.com/wittenberg) and Detlef [Steuer](https://github.com/dsteuer). Remaining errors are obviously mine. 
 
 ## Development
 I intend to extend the package with functions that
